<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etCreditorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_creditor_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_amount_owed"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etAmountPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_amount_paid"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_due_date"
            android:focusable="false"
            android:clickable="true" />

        <EditText
            android:id="@+id/etInterestRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_interest_rate"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spDebtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
